# post-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_posts_likes_follows.py
src/post_service/: config.py  db.py  deps.py  logging.py  main.py
src/post_service/api/: follows.py  health.py  media.py  posts.py
src/post_service/models/: follow.py  like.py  post.py
src/post_service/queue/: publisher.py
src/post_service/schemas/: post.py
src/post_service/security/: jwt_verify.py
src/post_service/services/: follows.py  media.py  posts.py
tests/: conftest.py
tests/integration/: test_backup_recovery.py  test_post_flow.py
tests/unit/: test_cursor.py
